--- a/vs/ugrep/ugrep/ugrep.vcxproj.filters
+++ b/vs/ugrep/ugrep/ugrep.vcxproj.filters
@@ -141,6 +141,12 @@
     <ClCompile Include="lib\matcher_avx512bw.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lib\composer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\simd.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\glob.hpp">
