--- a/configure.ac
+++ b/configure.ac
@@ -396,7 +396,7 @@ AM_CONDITIONAL([ENABLE_ZSH_COMPLETION],[test "x$with_zsh_completion_dir" != "xno
 AC_ARG_ENABLE(static,
   [AS_HELP_STRING([--enable-static],
                   [build static ugrep binaries])],
-              [enable_static=yes],
+              [enable_static=$enableval],
               [enable_static=no])
 AC_MSG_CHECKING(for --enable-static)
 if test "x$enable_static" == "xyes"; then
