--- a/.github/workflows/autobuild-static.yml
+++ b/.github/workflows/autobuild-static.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup Build Environment
         run: |
+          sudo apt-get update
           sudo apt install --no-install-recommends libbz2-dev liblzma-dev libpcre2-dev libz-dev liblz4-dev libzstd-dev
           sudo apt install linux-libc-dev-arm64-cross g++-aarch64-linux-gnu
       - name: Update autoconf
